--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -9,13 +9,11 @@
     <img src="{{ url_for('static', filename='kermit.JPG') }}" alt="" class="home_img">
 
     <p class="home_description">
-        Hello and welcome! Looking for a dog or a local rescue?
-        Clock on the one of the buttons below for which one you are looking for
-        and we will show you what is available!
+        Hello and welcome! Looking for a dog or a local rescue? Clock on the one of the buttons below for which one you are looking for and we will show you what is available!
     </p>
 
     <!-- Button trigger modal Search Rescues-->
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#searchRescueModal">
+    <button type="button" class="btn btn-primary searchRescueButton" data-toggle="modal" data-target="#searchRescueModal">
         Search for rescues
     </button>
     
