--- a/website/templates/results_dogs.html
+++ b/website/templates/results_dogs.html
@@ -79,6 +79,45 @@
             </div>
         </div>
     </div>
+
+
+    <li class="nav-item">
+        <!-- Button trigger modal Search Rescues-->
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#searchRescueModal">
+            Search Rescues
+        </button>
+
+        <!-- Modal -->
+        <div class="modal fade" id="searchRescueModal" tabindex="-1" role="dialog" aria-labelledby="searchRescueModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="searchRescueModalLabel">Search for rescues</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <form action="/rescues" method="post">
+                            <div class="mb-3">
+                                <label for="location" class="form-label">Location*</label>
+                                <input type="number" class="form-control" id="location" aria-describedby="locationHelp" name="location" placeholder="Enter Zip Code" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="distance" class="form-label">Distance</label>
+                                <input type="number" class="form-control" id="distance" aria-describedby="distanceHelp" name="distance" placeholder="Enter Miles">
+                            </div>
+                            <div id="note" class="form-text">Note: Increasing distance will show more results
+                                
+                            </div>
+                            <br>
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </form>
+    
+                    </div>
+                </div>
+            </div>
+        </div>
   </nav>
 
 
