--- a/website/static/main.css
+++ b/website/static/main.css
@@ -81,3 +81,17 @@ li {
 
 
   /* ********************************** */
+
+
+  /* pagination */
+  .pagination {
+    display: inline-block;
+  }
+  
+  .pagination a {
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+    font-size: 24px;
+  }
