--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -13,7 +13,7 @@
     </p>
 
     <!-- Button trigger modal Search Rescues-->
-    <button type="button" class="btn btn-primary searchRescueButton" data-toggle="modal" data-target="#searchRescueModal">
+    <button type="button" class="btn btn-primary searchRescueButton" data-toggle="modal" title="Shows local rescues based on location and distance" data-target="#searchRescueModal">
         Search for rescues
     </button>
     
@@ -49,7 +49,7 @@
 
     <!-- Button trigger modal Search Dogs-->
     
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#searchDogsModal">
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-toggle="tooltip" title="Search for dogs based on location, distance, breed, age, etc" data-target="#searchDogsModal">
         Search for dogs
     </button>
     
