--- a/website/static/main.css
+++ b/website/static/main.css
@@ -85,13 +85,10 @@ li {
 
   /* pagination */
   .pagination {
-    display: inline-block;
+    margin-top: 20px;
+    justify-content: center;
   }
   
-  .pagination a {
-    color: black;
-    float: left;
-    padding: 8px 16px;
-    text-decoration: none;
-    font-size: 24px;
+  .pagination button {
+    margin-left: 50px;
   }
