small edits to result pages

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -9,7 +9,7 @@
     <img src="{{ url_for('static', filename='kermit.JPG') }}" alt="" class="home_img">
 
     <p class="home_description">
-        Hello and welcome! Looking for a dog or a local rescue? Clock on the one of the buttons below for which one you are looking for and we will show you what is available!
+        Hello and welcome! Looking for a dog or a local rescue? Click on the one of the buttons below for which one you are looking for and we will show you what is available!
     </p>
 
     <!-- Button trigger modal Search Rescues-->
@@ -75,13 +75,8 @@
                             <input type="number" class="form-control" id="distance" aria-describedby="distanceHelp" name="distance" placeholder="Enter Miles">
                         </div>
                         <div class="mb-3">
-                            <label for="primaryBreed" class="form-label">Primary Breed</label>
-                            <input type="text" class="form-control" id="primaryBreed" aria-describedby="primaryBreedHelp" name="primaryBreed" placeholder="Enter Primary Breed">
-                        </div>
-                        
-                        <div class="mb-3">
-                            <label for="secondaryBreed" class="form-label">Secondary Breed</label>
-                            <input type="text" class="form-control" id="secondaryBreed" aria-describedby="secondaryBreedHelp" name="secondaryBreed" placeholder="Enter Secondary Breed">
+                            <label for="breed" class="form-label">Breed</label>
+                            <input type="text" class="form-control" id="breed" aria-describedby="breedHelp" name="breed" placeholder="Enter Breed">
                         </div>
 
                         <div class="mb-3">
