--- a/website/templates/results_rescues.html
+++ b/website/templates/results_rescues.html
@@ -93,15 +93,9 @@
                                 <input type="number" class="form-control" id="distance" aria-describedby="distanceHelp" name="distance" placeholder="Enter Miles">
                             </div>
                             <div class="mb-3">
-                                <label for="primaryBreed" class="form-label">Primary Breed</label>
-                                <input type="text" class="form-control" id="primaryBreed" aria-describedby="primaryBreedHelp" name="primaryBreed" placeholder="Enter Primary Breed">
+                                <label for="breed" class="form-label">Breed</label>
+                                <input type="text" class="form-control" id="breed" aria-describedby="breedHelp" name="breed" placeholder="Enter Breed">
                             </div>
-                            
-                            <div class="mb-3">
-                                <label for="secondaryBreed" class="form-label">Secondary Breed</label>
-                                <input type="text" class="form-control" id="secondaryBreed" aria-describedby="secondaryBreedHelp" name="secondaryBreed" placeholder="Enter Secondary Breed">
-                            </div>
-    
                             <div class="mb-3">
                                 <label for="age" class="form-label">Age</label>
                                 <input type="text" class="form-control" id="age" aria-describedby="ageHelp" name="age" placeholder="Enter Age">
