--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -11,6 +11,9 @@
     <!-- Main CSS File-->
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
 
+    <!-- Box Icons -->
+    <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+    
     <title>{% block title %}Home{% endblock %}</title>
   </head>
 
